# pyrfume

./: .buildinfo  .flake8  .gitignore  .isort.cfg  .pypi-upload.sh  .readthedocs.yml  .travis.yml  LICENSE  README.html  README.md  _setup.py  case-study.html  demo.html  design-scheme.html  dev.Dockerfile  develop.sh  environment.yml  featurization.html  genindex.html  notion-playground.ipynb  objects.inv  published-data.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  setup_djserver.ps1  setup_djserver.sh  test-dj.ipynb  test-install.sh  test.sh  url.py  visualization.html  your-data.html
.github/: .travis.yml
.github/workflows/: pythonpackage.yml
_sources/: README.md  demo.ipynb  featurization.ipynb  published-data.ipynb  visualization.ipynb  your-data.ipynb
dash/cabinet/: Dockerfile  requirements.txt
dash/cabinet/app/: main.py
dash/distance/: Dockerfile
dash/distance/app/: main.py
dash/dream/: Dockerfile
dash/dream/app/: main.py
dash/odorless/: Dockerfile
dash/odorless/app/: main.py
dash/odormap/: Dockerfile  requirements.txt
dash/odormap/app/: main.py
dash/odormap/app/data/: tsne_snitz.pkl  tsne_snitz_clusters.pkl
docs/: _config.yml  _demo.ipynb  _toc.yml  bechmarking_demo.ipynb  case-study.ipynb  conf.py  demo.ipynb  design-scheme.ipynb  featurization.ipynb  index.rst  published-data.ipynb  rtd-requirements.txt  visualization.ipynb  your-data.ipynb
docs/rtfd/: conf.py
my_data/: molecules.csv
mysql-docker/: docker-compose.yml
notebooks/: GRAS.ipynb  GRAS.py  Generate SDF File.ipynb  Generate SDF File.py  Intensity-Mordred.py  Leffingwell.ipynb  Leffingwell.py  all-dragon.ipynb  all-dragon.py  all_cas.ipynb  all_cas.py  arctander.ipynb  arctander.py  bushdid.ipynb  bushdid.py  cids_from_sources.ipynb  cids_from_sources.py  cids_smiles_to_sdf.ipynb  cids_smiles_to_sdf.py  cids_to_smiles.ipynb  cids_to_smiles.py  clean-fig.ipynb  clean-fig.py  datajoint-schematize.ipynb  datajoint-schematize.py  distance_distributions.ipynb  distance_distributions.py  dragon-clean-impute.ipynb  dragon-clean-impute.py  dragon-haddad-mordred-alignment.ipynb  dragon-haddad-mordred-alignment.py  dravnieks.ipynb  dravnieks.py  flavornet.ipynb  flavornet.py  generate-mordred.ipynb  generate-mordred.py  get-good-scents.ipynb  get-good-scents.py  good-scents-scrape.py  (+54 more)
pyrfume/: __init__.py  app.py  base.py  benchmarking.py  bushdid.py  cabinets.py  cleaning.py  company_x.py  datajoint_tools.py  dbtables.py  dravnieks.py  dream.py  embedding.py  experiments.py  features.py  google.py  haddad.py  intensity.py  keller.py  mol2networx.py  objects.py  odorants.py  optimization.py  physics.py  plotting.py  predictions.py  pubchem.py  publication.py  sigma_ff.py  snitz.py  westeros.py
pyrfume/loaders/: manoel_2016.py
pyrfume/unit_test/: __main__.py  load_manifest.ipynb  test_benchmarking.py  test_config_data.py  test_datajoint.py  test_datajoint_tool.py  test_datajoint_tools.py  test_docs.py  test_features.py  test_load_data.py  test_make_solutions.py  test_mixture.py  test_odorants.py  test_others_in__init__.py  test_physics.py  test_publication.py  test_test.py  unittest_utils.py
rtfd/: index.html
