[tool.poetry]
name = "pyrfume"
version = "0.17.4"
description = "A validation library for human olfactory psychophysics research."
authors = ["Rick Gerkin <rgerkin@asu.edu>"]
license = "MIT"
homepage = "http://pyrfume.org"
documentation = "https://pyrfume.readthedocs.io"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.6.1,<4.0"
dask = {extras = ["bag"], version = "^2.17.0"}
deap = ">=1.3.1"
ipython = ">=7.14.0"
ipywidgets = ">=7.5.1"
matplotlib = ">=3.2.1"
#missingpy = ">=0.2.0"
mordred = ">=1.2.0"
numpy = ">=1.18.4"
pandas = ">=1.0.3"
rdkit-pypi = ">=2021.3.4"
plotly = ">=4.8.0"
pubchempy = ">=1.0.4"
requests = ">=2.20.0"
quantities = ">=0.12.4"
scipy = ">=1.4.1"
sympy = ">=1.6"
scikit-learn = ">=0.23.1"
tqdm = ">=4.46.0"
eden-kernel = ">=0.3.1335"
#fancyimpute = ">=0.5.4"
black = ">=19.10b0"
isort = ">=4.3.21"
flake8 = ">=3.8.2"
datajoint = ">=0.12.6b1"
toml = ">=0.10.2"
#pillow = ">=7.1"


[tool.poetry.dev-dependencies]

[tool.black]
line-length = 100
target_version = ['py37']
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
