[tool.poetry]
name = "pyrfume"
version = "0.19"
description = "A validation library for human olfactory psychophysics research."
authors = ["Rick Gerkin <rgerkin@asu.edu>"]
license = "MIT"
homepage = "http://pyrfume.org"
documentation = "https://pyrfume.readthedocs.io"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
deap = { version = "^1.3.1", optional = true }
eden-kernel = "^0.3.1348"
mordredcommunity = "^2.0.5"
rdkit-pypi = "^2022.3.4"
plotly = "^5.9.0"
PubChemPy = "^1.0.4"
quantities = "^0.13.0"
toml = "^0.10.2"
dask = { version = "<=2021.3.0", extras = ["bag"], optional = true }
datajoint = ">0.12"
numpy = ">=1.22"
requests = ">=2.20.0"
scikit-learn = ">=0.23.1"
scipy = ">=1.8"
sympy = ">=1.6"
pandas = ">=1.4"
ipykernel = ">=5.5.6"
lxml = "<=5.1.1"

[tool.poetry.extras]
optimize = ["dask", "deap"]

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^5.0.3"
isort = "^5.10.1"
nbconvert = "<6.6.0"

[tool.black]
line-length = 100
target_version = ["py37"]
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
